cmake_minimum_required(VERSION 3.13)
project(PB16051314_project2)

set(CMAKE_CXX_STANDARD 14)

add_executable(PB16051314_project2 main.cpp )
add_executable(Tree ex1/source/Tree.cpp )
add_executable(BST ex1/source/BST.cpp )
add_executable(list ex2/source/list.cpp)
add_executable(2 ex2/source/list.cpp )
add_executable(cccc ex2/source/list.c)